menambahkan form input, billabong font dan segoui font

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,7 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
-    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(auth)/font.js", "src/app/(auth)/font.js"],
   "exclude": ["node_modules"]
 }
