delete: mock env

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-API_URL=
-MOCK_API_URL=https://8edd3251-cf95-42b8-b464-b550c4bad699.mock.pstmn.io/api
+API_URL=http://localhost:3000
 
-NEXT_PUBLIC_API_URL=
-NEXT_PUBLIC_MOCK_API_URL=
+NEXT_PUBLIC_API_URL=http://localhost:3000
