--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5",
