--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "filepond": "^4.31.3",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^11.3.30",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -24,6 +27,7 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
