--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "filepond": "^4.31.3",
+    "filepond": "^4.31.4",
     "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-crop": "^2.0.6",
     "filepond-plugin-image-edit": "^1.6.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
+    "filepond-plugin-media-preview": "^1.0.11",
     "framer-motion": "^11.3.30",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
