--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
     "filepond": "^4.31.3",
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-edit": "^1.6.3",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
+    "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide": "^0.433.0",
@@ -33,10 +32,9 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
-    "react-filepond": "^7.1.2",
-
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
